[tool.poetry]
name = "python-http-status"
version = "0.1.0"
description = ""
authors = ["tsubasaoura"]
readme = "README.md"
packages = [{include = "python_http_status"}]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.28.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
